Version 0.13.2 (2022-01-04)
- Fix cover state
- move delete_devices from RPCFunctions to central
- move new_devices from RPCFunctions to central

Version 0.13.1 (2022-01-04)
- Use generic climate profiles list

Version 0.13.0 (2022-01-04)
- Remove dedicated json tls option
- Fix unique_id for heating_groups
- Use domain name as base folder name
- Remove domain const from hahomematic

Version 0.12.0 (2022-01-03)
- Split number to integer and float

Version 0.11.2 (2022-01-02)
- Precise entity definitions

Version 0.11.1 (2022-01-02)
- Improve detection of multi channel devices

Version 0.11.0 (2022-01-02)
- Add positional arguments
- Add missing channel no
- Set ED_PHY_CHANNEL min_length to 1
- Add platform zu hub entities
- Use entities in properties
- Add transition to dimmer
- Rename entity.state to entity.value
- Remove channel no, if channel is the only_primary_channel

Version 0.10.0 (2021-12-31)
- Make reset_motion, reset_presence a button
- add check to device_name / Fixes

Version 0.9.1 (2021-12-30)
- Load and clear caches async
- Extend naming strategy to use device name if channel name is not customized

Version 0.9.0 (2021-12-30)
- Add new helper for event_name
- Add channel to click_event payload

Version 0.8.0 (2021-12-29)
- Use base class for file cache
- Rename primary_client to client
- Add export for device definition

Version 0.7.0 (2021-12-28)
- Remove deleted entities from device and central collections
- use datetime for last_events
- Climate IP: use calendar for duration away

Version 0.6.1 (2021-12-27)
- Display profiles only when hvac_mode auto is enabled
- Fix binary sensor state update for hmip 2-state sensors

Version 0.6.0 (2021-12-27)
- Add climate methods for away mode
- Fix HVAC_MODE_OFF for climate

Version 0.5.1 (2021-12-26)
- Fix hm_light turn_off

Version 0.5.0 (2021-12-25)
- Fix Select Entity
- Remove internal device temperature (ACTUAL_TEMPERATURE CH0)
- Support Cool Mode for IPThermostats